eksctl-deployment/templates/k8s-manifests/kata-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kata-deploy
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: kata-deploy
  template:
    metadata:
      labels:
        name: kata-deploy
    spec:
      serviceAccountName: kata-deploy-sa
      hostPID: true
      tolerations:
      - key: kata-dedicated
        operator: Exists
        effect: NoSchedule
      containers:
      - name: kube-kata
        image: quay.io/kata-containers/kata-deploy:3.27.0
        imagePullPolicy: Always
        securityContext:
          privileged: true
        command:
        - /usr/bin/kata-deploy
        - install
        volumeMounts:
        - name: crio-conf
          mountPath: /etc/crio/
        - name: containerd-conf
          mountPath: /etc/containerd/
        - name: host
          mountPath: /host/
        lifecycle:
          preStop:
            exec:
              command:
              - /usr/bin/kata-deploy
              - cleanup
      terminationGracePeriodSeconds: 120
      volumes:
      - name: crio-conf
        hostPath:
          path: /etc/crio/
      - name: containerd-conf
        hostPath:
          path: /etc/containerd/
      - name: host
        hostPath:
          path: /
